--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 
     <div class="container" style="margin-top: 100px; position: relative; z-index: 100;">
-        <div class="yiyan" id="hitokoto">一言文字</div>
+        <div class="yiyan" id="hitokoto">条条大路通罗马</div>
         <!--搜索开始-->
         <div id="search" class="s-search">
             <div id="search-list" class="hide-type-list" style="visibility: hidden;">
