--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             </video> -->
         <!--注释掉视频可换成图片版本-->
         <!-- <img src="https://cn.bing.com//th?id=OHR.HuntsMesa_JA-JP3140979616_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp" alt=""  class="no-click" > -->
-        <img src="./resources/image/th.jpg" alt="" class="no-click">
-
+       <!-- <img src="./resources/image/th.jpg" alt="" class="no-click"> -->    
+            <img src="https://bing.img.run/rand.php" alt="" class="no-click"> 
 
         <div class="bottom-cover"
             style="background-image: linear-gradient(rgba(255, 255, 255, 0) 0%, rgb(244 248 251 / 0.6) 50%, rgb(244 248 251) 100%);">
